--- a/7.13浮动/今日作业/腾讯网.css
+++ b/7.13浮动/今日作业/腾讯网.css
@@ -68,7 +68,7 @@ width: 100%;    position: absolute;
     margin-right: 10px;
 }
 .f2_div2{
-    width: 28px;height: 22px;
+    height: 22px;
     /* float: right; */
     display: inline-block;
 }
