--- a/豆瓣音乐/豆瓣.css
+++ b/豆瓣音乐/豆瓣.css
@@ -57,6 +57,7 @@ a {
 .box_nav {
     height: 115px;
     margin-bottom: 20px;
+    background-color: #F0F3EF;
 }
 
 .nav-wrap {
@@ -361,6 +362,10 @@ a {
     color: rgb(255, 255, 255);
     font-size: 17px;
 }
+.button:hover{
+    background-color: #42B18E;
+    color: #E6F5F1;
+}
 .beg-block{
 width: 100%;
 }
@@ -380,6 +385,10 @@ width: 100%;
     height: 36px;
     line-height: 36px;
     /* border: 1px solid red; */
+    cursor: pointer;
+}
+.tag-table-ul li:hover{
+    background-color: #F5F7F8;
 }
 .tag-table-ul a{
     color: rgb(19, 138, 100);
@@ -405,7 +414,7 @@ width: 100%;
     background: #139D72;
     border: 1px solid #138A64;
     border-radius: 3px;
-    font-size: 14px;
+    font-size: 13px;
     color: #FFF;
     line-height: 24px;
     width: 88px;
@@ -414,7 +423,9 @@ width: 100%;
     text-align: center;
     float: right;
 }
-
+.tag-button:hover{
+    background-color: #42B18E;
+}
 .content-text span{
     color: rgb(153, 153, 153);
     font-size: 14px;
@@ -437,9 +448,13 @@ width: 100%;
 .hot-artist-songs li{
     width: 100%;
     height: 60px;
+    position: relative;
     /* border: 1px solid yellow; */
     /* line-height: 50px; */
 }
+.hot-artist-songs li:hover{
+    background-color: #F5F7F8;
+}                                              
 .song-img{
     width: 48px;
     height: 48px;
@@ -481,8 +496,18 @@ width: 100%;
     line-height: 48px;
     display: none;
 }
-.song-img:hover .zhe2{
+.hot-artist-songs li:hover .zhe2{
     display: block;
+}
+.rank{
+    position: absolute;
+    height: 100%;
+    right: 10px;
+    top: 0;
+    font-weight: normal;
+    font-size: 35px;
+    color: #E6E6E6;
+    line-height: 60px;
 }
 .imging{
     width: 100%;
