--- a/7.17背景图显示/百度首页/baidu首页.css
+++ b/7.17背景图显示/百度首页/baidu首页.css
@@ -144,19 +144,12 @@
 }
 .animation-shadow{
     position: absolute;
-    /* 背景跟随 */
     height: 100%;
     top: 0;
-    /* 顶部线条跟随 */
-    /* height: 10%;
-    top: 0; */
-    /* 底部线条跟随 */
-    /* height: 10%;
-    bottom: 0;  */
+    left: 0;
     z-index: 0;
     background-color: rgb(204, 0, 0);
     transition: all .5s ease 0s;
-    /* width: 48px; */
 }
 .nav-content li:hover{
     cursor: pointer;
