--- a/7.20 flex/动画元素作业/03世界工厂一条龙+苏宁易购侧边栏/首页+侧边栏.css
+++ b/7.20 flex/动画元素作业/03世界工厂一条龙+苏宁易购侧边栏/首页+侧边栏.css
@@ -5,13 +5,16 @@
 *{
     margin: 0;padding: 0;list-style: none;    box-sizing: border-box;
 }
-
+button{
+    border: none;
+}
 a{
     text-decoration: none;
     cursor: pointer;
     outline-width: 0;
     color: inherit;
   }
+  /* input { outline:none; } */
   img{
     border: 0;
   }
@@ -72,6 +75,7 @@ a{
 .nav-left a:nth-of-type(1) {
     padding: 0 16px 0 22px;
     border-right: 1px solid black;
+    color: #1971EF;
 }
 .nav-left a:nth-of-type(2) {
     display: inline-block;
@@ -125,25 +129,27 @@ display: block;
     position: absolute;
     left: 0;
     top: 40px;
-    width: 160px;height: 240px;
+    width: 185px;
+    height: 259px;
     padding: 20px 0 20px 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .15);
-    /* border: 1px solid black; */
     font-size: 13px;
-    cursor:auto;
+    cursor: auto;
     display: none;
+    background-color: white;
+    z-index: 999;
 }
 .service{
     position: absolute;
     left: -90px;
     top: 40px;
-    width: 230px;
+    width: 253px;
     padding: 20px 0 20px 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .15);
     /* border: 1px solid black; */
     font-size: 13px;
     cursor:auto;
-    display: none;
+    display: none;background-color: white;
 }
 .move{
     position: absolute;
@@ -155,7 +161,7 @@ display: block;
     /* border: 1px solid black; */
     font-size: 13px;
     cursor:auto;
-    display: none;
+    display: none;background-color: white; z-index: 999;
 }
 .move-ul{
     display: flex;
